--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,10 +1,34 @@
 .NavBar {
-    height: 50px;
-    background: rgb(70, 63, 63);
+    display: flex;
+    justify-content: space-between;
+    /* padding: 10px 15px; */
+    height: 40px;
+}
+
+.NavBar-welcome {
+    color: black;
+    font-size: 14px
+}
+
+.NavBar-link {
+    color: rgb(50, 50, 50);
+    font-size: 14px;
 }
 
 .NavBar p {
-    margin: 0;
-    padding: 15px;
+    font-weight: 500;
+    font-size: 24px;
+    margin-top: 5px;
+}
 
+.nav-thirds {
+    width: 33.333vw;
+}
+
+.NavBar-wrap {
+    padding: 0 10px;
+}
+
+#first {
+    display: flex;
 }
